--- a/Index.html
+++ b/Index.html
@@ -13,16 +13,18 @@
     <div class="header">
         <div class="header__bac">
             <h1 class="header__txt-top">Добро пожаловать <br> на мой сайт !</h1>
-            <p class="header__txt-mid">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="header__txt-mid_big">поехали</span> и <span class="header__txt-mid_big">приступай</span></p>
+            <p class="header__txt-mid">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="header__txt-mid_big">поехали</span> и 
+            <span class="header__txt-mid_big">приступай</span></p>
         </div>
         <div class="header__link">
             <a class="header__link_txt" href="">Поехали!</a>
         </div>
-</div>
-<div class="Footer">
-    <a href="#" class="Footer__game_1">Игра 1</a>
-    <a href="#" class="Footer__game_2">Игра 2</a>
-    <a href="#" class="Footer__game_3">Игра 3</a>
-</div>
+    </div>
+    <div class="Footer">]
+        <a href="#" class="Footer__game_1">Игра 1</a>
+        <a href="#" class="Footer__game_2">Игра 2</a>
+        <a href="#" class="Footer__game_3">Игра 3</a>
+
+    </div>
 </body>
 </html>
